--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ inquirerpy = "^0.3.3"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.942"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
